# VEN

./: CMakeLists.txt  CMakePresets.json  INSTRUCTIONS.md  LICENSE  LICENSE.md  OBJLoader.hpp  Platform  Platform.hpp  README.md  Semaphores.hpp  Version.hpp  compile.bat  main.cpp  nihil-engine.sln  nihil-engine.vcxproj  nihil-engine.vcxproj.filters  utils.hpp
Classes/App/: App.cpp  App.hpp  App.tpp
Classes/Buffer/: Buffer.hpp
Classes/Camera/: Camera.hpp
Classes/Engine/: Engine.Device.cpp  Engine.cpp
Classes/Keyboard/: Keyboard.cpp  Keyboard.hpp
Classes/Listeners/: Listeners.hpp  onResize.hpp
Classes/Nihil/: Nihil.DeleteOPS.cpp  Nihil.Render.cpp  Nihil.hpp
Classes/Object/: Object.hpp
Classes/Pipeline/: Pipeline.cpp  Pipeline.hpp
Classes/PushConstants/: PushConstants.hpp
Classes/RenderPass/: RenderPass.cpp  RenderPass.hpp
Classes/Renderer/: Renderer.Render.cpp  Renderer.hpp
Classes/Resources/: Resources.hpp  SurfaceKHR.hpp  SwapchainKHR.hpp
Classes/Scene/: Scene.cpp  Scene.hpp
Classes/Shader/: Shader.cpp  Shader.hpp
Classes/Swapchain/: Swapchain.cpp  Swapchain.hpp
Classes/WorkCommand/: WorkCommand.hpp
Resources/Shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  instanced.frag  instanced.frag.spv  instanced.vert  instanced.vert.spv
nihil-render/: nihil.hpp
nihil-render/Classes/App/: App.hpp
nihil-render/Classes/Engine/: Engine.DynamicPipeline.cpp  Engine.cpp  Engine.hpp
nihil-render/Classes/Renderer/: Renderer.Render.cpp  Renderer.Swapchain.cpp
nihil-render/nstd/headers/: OBJLoader.hpp
resources/Shaders/: shader.vert  shaderV.spv
src/: Constants.hpp  VEN.hpp  WinCompat.cpp  WinCompat.hpp  main.cpp  stb-imlp.cpp  stb_image.h  stb_image_include.h  utils.hpp
src/Concepts/: Concepts.hpp  HasFlag.hpp  Integer.hpp  StdVector.hpp
src/Core/: Core.hpp
src/Core/Classes/AABB/: AABB.hpp
src/Core/Classes/App/: App.cpp  App.hpp  App.tpp
src/Core/Classes/Asset/: Asset.cpp  Asset.hpp
src/Core/Classes/AssetUsage/: AssetUsage.hpp
src/Core/Classes/Listeners/: Listeners.hpp  onHandle.hpp  onSwapchainRecreation.hpp
src/Core/Classes/ObjectAllocator/: ObjectAllocator.hpp
src/Core/Classes/Plane/: Plane.cpp  Plane.hpp
src/Core/Classes/Resource/: Resource.hpp
src/Core/Classes/Resources/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  DeviceMemory.hpp  Fence.hpp  FrameBuffer.hpp  Image.hpp  ImageView.hpp  Instance.hpp  Pipeline.hpp  PipelineCache.hpp  PipelineLayout.hpp  RenderPass.hpp  Resources.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  SurfaceKHR.hpp  SwapchainKHR.hpp
src/Core/Enums/: VisibilityQueryResult.hpp
src/Core/Functions/BVH/: BVH.cpp  BVH.hpp
src/Core/Structs/: BVHNode.hpp
src/Engine/: Engine.hpp
src/Engine/Classes/Keyboard/: Keyboard.hpp
src/Graphics/: Vulkan.hpp
src/Graphics/Classes/Buffer/: Buffer.hpp
src/Graphics/Classes/Camera/: Camera.cpp  Camera.hpp
src/Graphics/Classes/Engine/: Engine.Device.cpp  Engine.hpp
src/Graphics/Classes/Model/: Model.hpp
src/Graphics/Classes/Renderer/: Renderer.Render.cpp  Renderer.cpp
src/Graphics/Classes/Resource/: Resource.hpp
src/Graphics/Classes/Resources/: Device.hpp
src/Graphics/Classes/Scene/: Scene.cpp  Scene.hpp
src/Graphics/Classes/Swapchain/: Swapchain.hpp
src/Graphics/Vulkan/Classes/Buffer/: Buffer.hpp  FindMemoryTypeIndex.hpp  StorageAndUniformBuffer.hpp  StorageBuffer.hpp  UniformBuffer.hpp
src/Graphics/Vulkan/Classes/Camera/: Camera.cpp  Camera.hpp
src/Graphics/Vulkan/Classes/DescriptorAllocator/: DescriptorAllocator.hpp
src/Graphics/Vulkan/Classes/DescriptorSet/: DescriptorSet.cpp  DescriptorSet.hpp
src/Graphics/Vulkan/Classes/Engine/: Engine.Device.cpp  Engine.cpp  Engine.hpp
src/Graphics/Vulkan/Classes/Material/: Material.hpp
src/Graphics/Vulkan/Classes/Model/: Model.hpp
src/Graphics/Vulkan/Classes/Object/: Object.hpp
src/Graphics/Vulkan/Classes/Pipeline/: Pipeline.cpp  Pipeline.hpp
src/Graphics/Vulkan/Classes/RenderPass/: RenderPass.cpp  RenderPass.hpp
src/Graphics/Vulkan/Classes/Renderer/: Renderer.Render.cpp  Renderer.hpp
src/Graphics/Vulkan/Classes/Sampler/: Sampler.cpp  Sampler.hpp
src/Graphics/Vulkan/Classes/Scene/: Scene.cpp  Scene.hpp  Scene.tpp
src/Graphics/Vulkan/Classes/SceneOld/: Scene.cpp  Scene.hpp
src/Graphics/Vulkan/Classes/Shader/: Shader.cpp  Shader.hpp
src/Graphics/Vulkan/Classes/Swapchain/: Swapchain.cpp  Swapchain.hpp  Swapchain.tpp
src/Graphics/Vulkan/Classes/Texture/: Texture.cpp  Texture.hpp
src/Standard/: Enumerate.hpp  File.hpp  Logger.hpp  Node.hpp  OBJLoader.hpp  Platform.hpp  ShortHeap.hpp
src/Standard/BlockAllocator/: BlockAllocator.hpp  BlockAllocator.tpp
src/Standard/File/: File.cpp  File.tpp
